tests/ecc-aws-170-security_group_ingress_is_restricted_traffic_to_port_5500/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-0e24cbbe76e4a9028",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "029_security_group_red"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-029-security_group_ingress_is_restricted_traffic_to_ftp_port_21"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "029_security_group_red",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            },
            {
                "GroupId": "sg-0e24cbbe76e4a9038",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "170_security_group_red2"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-170-security_group_ingress_is_restricted_traffic_to_port_5500"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "170_security_group_red2",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
